Исправил авторизацию пользователя. Сделал выгрузку абонентов в дерево контактов. Исправил поиск вашего аккаунта в дереве